--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous">
-  <!-- <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" /> -->
+  <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <meta charset="utf-8" />
@@ -14,7 +14,7 @@
 <title>Ingraham's Woodworking Shop</title>
 
 <body>
-  <!-- <script type="text/javascript" src="js/materialize.min.js"></script> -->
+  <script type="text/javascript" src="js/materialize.min.js"></script>
   <div id="root"></div>
 </body>
 
